Atualiza CSS e HTML para responsividade e ajustes visuais

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>Cantar</li>
     </ul>
 
-    <img class="criminal" src = "temp_imagens/criminal.jpg" alt="Imagem investigacao">
+    <img class="criminal" src = "temp_imagens/criminal.jpg" width="510" alt="Imagem investigacao">
 
 
     <h2>Sonhos de viagem pelo mundo</h2>
@@ -44,17 +44,17 @@
         
         <tr>
             <td>Itália</td>
-            <td><img src="temp_imagens/italia.jpg" alt="italia"></td>
+            <td><img src="temp_imagens/italia.jpg" width="390" alt="italia"></td>
         </tr>
         
         <tr>
             <td>Estados Unidos</td>
-            <td><img src="temp_imagens/eua.jpg" alt="eua"></td>
+            <td><img src="temp_imagens/eua.jpg" width="390" alt="eua"></td>
         </tr>
 
         <tr>
             <td>Costa Rica</td>
-            <td><img src="temp_imagens/costarica.jpg" alt="costarica"> </td>
+            <td><img src="temp_imagens/costarica.jpg" width="390" git add estilo.css index.htmlalt="costarica"> </td>
         </tr>
 
     </table>
